[gd_scene load_steps=7 format=3 uid="uid://cwnmndi7rsmtq"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_6kvde"]
[ext_resource type="Texture2D" uid="uid://dkv4xhjgln1t2" path="res://Assets/Images/cueb.svg" id="2_gtcg4"]
[ext_resource type="Script" path="res://Scripts/DeathManager.gd" id="3_e8bov"]
[ext_resource type="PackedScene" uid="uid://dcgmfa8ut75d8" path="res://Scenes/Scene Assets/Sound/sfx_player.tscn" id="4_ibsc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vk653"]
size = Vector2(54, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvvp7"]
size = Vector2(64, 64)

[node name="Player" type="CharacterBody2D"]
editor_description = "Player's name is cueb"
z_index = -1
position = Vector2(544, 487)
collision_mask = 6
script = ExtResource("1_6kvde")

[node name="Cueb" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_gtcg4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vk653")

[node name="DeathManager" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 28
script = ExtResource("3_e8bov")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathManager"]
shape = SubResource("RectangleShape2D_jvvp7")

[node name="DeathTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SFXPlayer" parent="." instance=ExtResource("4_ibsc3")]
unique_name_in_owner = true

[connection signal="body_entered" from="DeathManager" to="DeathManager" method="_on_body_entered"]
[connection signal="body_exited" from="DeathManager" to="DeathManager" method="_on_body_exited"]
